--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -710,6 +710,10 @@
       "subtitle": "Ŝŧőp ŉőŧįƒįčäŧįőŉş ƒřőm őŉę őř mőřę äľęřŧįŉģ řūľęş",
       "title": "Ŝįľęŉčęş"
     },
+    "alerting-upgrade": {
+      "subtitle": "Ůpģřäđę yőūř ęχįşŧįŉģ ľęģäčy äľęřŧş äŉđ ŉőŧįƒįčäŧįőŉ čĥäŉŉęľş ŧő ŧĥę ŉęŵ Ğřäƒäŉä Åľęřŧįŉģ",
+      "title": "Åľęřŧįŉģ ūpģřäđę"
+    },
     "alerts-and-incidents": {
       "subtitle": "Åľęřŧįŉģ äŉđ įŉčįđęŉŧ mäŉäģęmęŉŧ äppş",
       "title": "Åľęřŧş & ĨŖM"
