UI: New share button and toolbar reorganize (#77563)

--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -311,6 +311,7 @@
       "save": "Dashboard speichern",
       "settings": "Dashboard-Einstellungen",
       "share": "Dashboard oder Panel teilen",
+      "share-button": "",
       "unmark-favorite": "Markierung als Favorit entfernen"
     },
     "validation": {
