Frontend: Migrate `Drawer.tsx` from aria-label e2e selectors to data-testid (#79616)
* refactor: update aria-label to data-testid

* refactor: update aria-label to data-testid

* refactor: replace title

* refactor: update selector text

* feat: update translation file

* fix old phrases

---------

Co-authored-by: joshhunt <josh@trtr.co>

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -413,9 +413,6 @@
       "label": "Add new data source"
     }
   },
-  "drawer": {
-    "close": "Close Drawer"
-  },
   "explore": {
     "add-to-dashboard": "Add to dashboard",
     "rich-history": {
@@ -555,6 +552,9 @@
     "loading": "Loading folders..."
   },
   "grafana-ui": {
+    "drawer": {
+      "close": "Close"
+    },
     "modal": {
       "close-tooltip": "Close"
     },
