--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -413,9 +413,6 @@
       "label": "Åđđ ŉęŵ đäŧä şőūřčę"
     }
   },
-  "drawer": {
-    "close": "Cľőşę Đřäŵęř"
-  },
   "explore": {
     "add-to-dashboard": "Åđđ ŧő đäşĥþőäřđ",
     "rich-history": {
@@ -555,6 +552,9 @@
     "loading": "Ŀőäđįŉģ ƒőľđęřş..."
   },
   "grafana-ui": {
+    "drawer": {
+      "close": "Cľőşę"
+    },
     "modal": {
       "close-tooltip": "Cľőşę"
     },
